# autonav_software_2023

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  build.sh  build_odroid.sh  contribution.md  imgui.ini  new_package.sh
.github/workflows/: compile_run.yml  firmware.yml
autonav_ws/src/autonav_display/: CMakeLists.txt  package.xml  setup.cfg  setup.py
autonav_ws/src/autonav_display/autonav_display/: display.py
autonav_ws/src/autonav_display/include/autonav_display/: all.h
autonav_ws/src/autonav_display/include/autonav_display/tabs/: conbus.h  config.h  dashboard.h  debug.h  logs.h  no.txt  performance.h  plots.h  preferences.h  vision.h
autonav_ws/src/autonav_display/launch/: display.xml
autonav_ws/src/autonav_display/src/: broadcast.py  display.cpp  main.cpp
autonav_ws/src/autonav_filters/: CMakeLists.txt  package.xml  setup.cfg  setup.py
autonav_ws/src/autonav_filters/src/: converting_to_cpp.py  deadrekt.py  filters.py  garbage.py  gps_feedback_data.py  moduulo.py  motor_feedback_data.py  motor_feedbacks_pure.py  particlefilter.py  pf.py  py_data.py  testing_feedback.py  testing_gps.py  visualize_pf_compare.py
autonav_ws/src/autonav_followers/: package.xml  setup.cfg  setup.py
autonav_ws/src/autonav_launch/: CMakeLists.txt  package.xml  setup.cfg  setup.py
autonav_ws/src/autonav_launch/launch/: competition.xml  competition_nd.xml  display.xml  managed_manual.xml  managed_manual_imu.xml  managed_manual_steam.xml  managed_sim.xml  managed_steam.xml  managed_steam_nd.xml  managed_xbox.xml  managed_xbox_nd.xml  manual.xml  manual_sim.xml  practice.xml  practice_nd.xml  rqt.xml  simulation.xml  simulation_nd.xml  test.xml
autonav_ws/src/autonav_libs/: CMakeLists.txt  package.xml
autonav_ws/src/autonav_libs/autonav_libs/: __init__.py  conbus.py  configuration.py  node.py
autonav_ws/src/autonav_libs/include/autonav_libs/: autonav.h  common.h  configuration.h  device_state.h  node.h  system_state.h  utils.h
autonav_ws/src/autonav_libs/src/: autonav.cpp  autonav.hpp  autonav.py  canbus.py  common.cpp  conbus.py  configuration.cpp  node.cpp
autonav_ws/src/autonav_logging/: CMakeLists.txt  package.xml
autonav_ws/src/autonav_logging/src/: combined_logger.cpp  logging.cpp
autonav_ws/src/autonav_manual/: CMakeLists.txt  package.xml
autonav_ws/src/autonav_manual/launch/: remote.xml
autonav_ws/src/autonav_manual/src/: example.cpp  remote.cpp  remote_steamcontroller.cpp  steam.py
autonav_ws/src/autonav_msgs/: CMakeLists.txt  package.xml
autonav_ws/src/autonav_msgs/msg/: ConBusInstruction.msg  Conbus.msg  DeviceState.msg  GPSData.msg  GPSFeedback.msg  GoalPoint.msg  IMUData.msg  ImuData.msg  Log.msg  MotorControllerDebug.msg  MotorFeedback.msg  MotorInput.msg  NodeState.msg  ObjectDetection.msg  Obstacle.msg  Obstacles.msg  Path.msg  PathingDebug.msg  PerfResult.msg  Position.msg  SafetyLights.msg  SteamInput.msg  SystemState.msg  Waypoint.msg
autonav_ws/src/autonav_msgs/srv/: SetDeviceState.srv  SetSystemState.srv
autonav_ws/src/autonav_nav/: CMakeLists.txt  package.xml
autonav_ws/src/autonav_nav/autonav_nav/: pure_pursuit.py
autonav_ws/src/autonav_nav/src/: astar.py  path_resolver.py  pp_viewer.py
autonav_ws/src/autonav_pathing/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
autonav_ws/src/autonav_pathing/src/object_detection/: circumscriber.py  circumscription_test.py  object_handling.py
autonav_ws/src/autonav_pathing/src/path_planning/: main.py  path_planning.py  path_planning_test.py  planning_test.py  tangent_based.py
autonav_ws/src/autonav_pathing/src/pure_pursuit/: lookahead_finder.py  pure_pursuit.py  pursuit_test.py  random_path.py
autonav_ws/src/autonav_serial/: CMakeLists.txt  package.xml
autonav_ws/src/autonav_serial/src/: camera.py  imu.py  jams.py  safety_lights.py  serial.py  serial_node.py  vectornav.cpp
autonav_ws/src/autonav_state/: CMakeLists.txt  package.xml
autonav_ws/src/autonav_state/src/: systemstate.cpp
autonav_ws/src/autonav_vision/: CMakeLists.txt  package.xml  setup.cfg  setup.py
autonav_ws/src/autonav_vision/autonav_vision/: main.py
autonav_ws/src/autonav_vision/src/: circumscriber.py  cv_vision.py  expandify.cpp  expandify.py  main.py  transformations.py
autonav_ws/src/scr_configuration/: CMakeLists.txt  package.xml
autonav_ws/src/scr_configuration/src/: config.cpp
autonav_ws/src/scr_core/: CMakeLists.txt  package.xml
autonav_ws/src/scr_core/include/scr_core/: configuration.h  device_state.h  node.h  performance.h  system_mode.h  system_state.h  utils.h
autonav_ws/src/scr_core/scr_core/: __init__.py  configuration.py  node.py  performance.py  state.py
autonav_ws/src/scr_core/src/: configuration.cpp  node.cpp  performance.cpp
autonav_ws/src/scr_logging/: CMakeLists.txt  package.xml
autonav_ws/src/scr_logging/src/: logging.cpp
autonav_ws/src/scr_msgs/: CMakeLists.txt  package.xml
autonav_ws/src/scr_msgs/msg/: ConfigurationInstruction.msg  DeviceState.msg  Log.msg  PerformanceResult.msg  SystemState.msg
autonav_ws/src/scr_msgs/srv/: SetDeviceState.srv  SetSystemState.srv
autonav_ws/src/scr_state/: CMakeLists.txt  package.xml
autonav_ws/src/scr_state/src/: systemstate.cpp
display/: index.html
display/scripts/: globals.js  main.js  tabs.js  utilities.js
display/styles/: index.css  reset.css
docs/: can.md  ros_topics.md
firmware/: estop.ino
firmware/CAN/: autonav.dbc  igvc.cangaroo
firmware/estop_relay/: estop_common.h  estop_relay.ino
firmware/estop_remote/: estop_common.h  estop_remote.ino
firmware/motor_control/: common.h  controller.ino  differential_drive.h  motor.h  motor_control.ino  motor_with_encoder.h  time.h
firmware/object_detection/: firmware.ino
firmware/safety_lights/: safety_lights.ino
path_complete/: __main__.py
path_complete/object_detection/: circumscription_test.py  main.py  object_handling.py
pure_pursuit/: __main__.py  pure_pursuit.py  pursuit_test.py
scripts/: clean.sh
setup/: autonav.rules  autonav.service  autonav_service.sh  common.sh  jams.sh  requirements.txt  setup.sh  steam.sh  vnav.sh
(+42 files in other folders)
