<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autonav_display</name>
  <version>1.0.0</version>
  <description>The primay display node</description>
  <maintainer email="dylan.zemlin@gmail.com">Dylan Zemlin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>autonav_msgs</depend>
  <depend>scr_core</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>scr_msgs</depend>
    
  <depend>libglfw3-dev</depend>
  <depend>libglew-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
