<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autonav_filters</name>
  <version>1.0.0</version>
  <description>Contains all of our filters such as particle filters.</description>
  <maintainer email="dylan.zemlin@gmail.com">Dylan Zemlin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <exec_depend>ros2launch</exec_depend>

  <depend>rclpy</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
