<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autonav_nav</name>
  <version>1.0.0</version>
  <description>Contains nodes relevant to creating and resolving paths.</description>
  <maintainer email="dylan.zemlin@gmail.com">Dylan Zemlin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <exec_depend>ros2launch</exec_depend>

  <depend>rclpy</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
