<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>autonav_pathing</name>
    <version>1.0.0</version>
    <description>Handles path finding, following and other related topics</description>
    <maintainer email="dylan.zemlin@gmail.com">Dylan Zemlin</maintainer>
    <license>MIT License</license>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <export>
    <build_type>ament_python</build_type>
    </export>
</package>