<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autonav_pathing</name>
  <version>1.0.0</version>
  <description>All pathing related nodes and functionality</description>
  <maintainer email="antoniochappell@protonmail.com">Antonio Chappell</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>autonav_msgs</depend>
  
  <build_depend>rosidl_default_generators</build_depend>
  
  <exec_depend>rosidl_default_generators</exec_depend>
  
  <member_of_group>rosidl_default_generators</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
