<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scr_logging</name>
  <version>1.0.0</version>
  <description>Receives logs from other nodes and writes them to disk</description>
  <maintainer email="dylan.zemlin@gmail.com">Dylan Zemlin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>scr_core</depend>
  <depend>scr_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
